Adding activation classes (animations module)

--- a/modules/forms.html
+++ b/modules/forms.html
@@ -18,6 +18,7 @@
 			</div>
 		</div>
 	</div>
+	<div class="row-2 text-center"><button class="animation-fade">hey.</button></div>
 </body>
 
 <script>
