--- a/modules/forms.html
+++ b/modules/forms.html
@@ -8,17 +8,10 @@
 
 </head>
 <body class="layer scroll foo inert">
-	<div class="row-2"></div>
-	<div class="row-8">
-		<div class="col-6 col-center">
-			<div class="layer inert" id="foo">
-				<div class="page theme-primary inactive" id="bar1">primary Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, molestias, sapiente, at, dolor qui velit amet tenetur voluptas eum explicabo a cum in reprehenderit beatae fuga! Est saepe veritatis modi!</div>
-				<div class="page theme-secondary active" id="bar2">secondary Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, ducimus ipsam velit magni omnis voluptatibus aperiam error iste nam expedita dolor libero atque quo. Placeat, cupiditate error eaque porro. Alias.</div>
-				<div class="page theme-dark inactive" id="bar3">dark Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore, vel ad possimus ea in eaque minima consectetur quam. Quasi, nesciunt odio repudiandae asperiores esse magni expedita quo dolor cupiditate debitis.</div>
-			</div>
-		</div>
-	</div>
-	<div class="row-2 text-center"><button class="animation-fade">hey.</button></div>
+	<div class="fourth theme-dark">lorem</div>
+    <div class="fourth theme-dark">lorem</div>
+    <div class="fourth theme-dark">lorem</div>
+    <div class="fourth theme-dark" style="margin-right:0">lorem</div>
 </body>
 
 <script>
