Grid module - adding gutter classes

--- a/modules/forms.html
+++ b/modules/forms.html
@@ -8,10 +8,18 @@
 
 </head>
 <body class="layer scroll foo inert">
-	<div class="fourth theme-dark">lorem</div>
-    <div class="fourth theme-dark">lorem</div>
-    <div class="fourth theme-dark">lorem</div>
-    <div class="fourth theme-dark" style="margin-right:0">lorem</div>
+	<div class="row cols-gutter-3">
+        <div class="col theme-dark">sup</div>
+        <div class="col theme-dark">sup</div>
+        <div class="col theme-dark">sup</div>
+        <div class="col theme-dark">sup</div>
+        <div class="col theme-dark">sup</div>
+        <div class="col theme-dark">sup</div>
+        <div class="col theme-dark">sup</div>
+        <div class="col theme-dark">sup</div>
+        <div class="col theme-dark">sup</div>
+        <div class="col theme-dark">sup</div>   
+    </div>
 </body>
 
 <script>
