Lots of work on themes (in-progress), added $components argument for style mixin

--- a/modules/forms.html
+++ b/modules/forms.html
@@ -7,7 +7,7 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
 </head>
-<body class="layer scroll foo inert">
+<body class="layer scroll f-dark inert">
 	<div class="row cols-gutter-3">
         <div class="col theme-dark">sup</div>
         <div class="col theme-dark">sup</div>
@@ -19,6 +19,15 @@
         <div class="col theme-dark">sup</div>
         <div class="col theme-dark">sup</div>
         <div class="col theme-dark">sup</div>   
+    </div>
+
+    <div class="foo">no parent</div>
+    <div class="f-dark">
+        <div class="foo">dark</div>
+    </div>
+
+    <div class="f-light">
+        <div class="foo">light</div>
     </div>
 </body>
 
