Fixed position-absolute mixin and removed unused layout mixins Added layer components Added modal component to panels module

--- a/modules/forms.html
+++ b/modules/forms.html
@@ -20,6 +20,19 @@
         <div class="col theme-dark">sup</div>
         <div class="col theme-dark">sup</div>   
     </div>
+    <div class="overlay dark">
+        <div class="modal">
+            <header>
+                <h1>I'm a modal!</h1>
+            </header>
+            <section>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Natus, itaque, fuga, sit alias et voluptatum at commodi illum minus quod error animi corrupti aut ab eligendi ipsa ut placeat labore.</p>
+            </section>
+            <footer>
+                <button class="right">Okay</button>
+            </footer>
+        </div>
+    </div>
 </body>
 
 <script>
