Expanded row-height function (still same as column-width); Added row gutters! Changed theme-[light, dark] to mode-[light, dark]

--- a/sandbox.html
+++ b/sandbox.html
@@ -20,7 +20,7 @@
         </div>
     </header>
     <section class="row-11">
-        <aside class="col-3 theme-dark">
+        <aside class="col-3 mode-dark">
             <nav>
                 <ul class="align-center">
                     <li><a href="#">Profile</a></li>
