Adding %button-inline (might not be necessary); Adding %button-circle[-small/large]; Fixing scope of text-decoration in button component; Fixing column gutters; Removing display prescribing on shapes; Removing %anchor-fill;

--- a/demos/spotify.html
+++ b/demos/spotify.html
@@ -54,11 +54,11 @@
                 <header class="border-bottom border-lighten row">
                     <h4 class="float-left">Enjoy a cozy evening...</h4>
                     <div class="float-right">
-                        <div class="shape-circle-medium border text-midcenter inline"><i class="fa fa-chevron-left"></i></div>
-                        <div class="shape-circle-medium border text-midcenter inline"><i class="fa fa-chevron-right"></i></div>
+                        <a class="button large circle transparent primary inline"><i class="fa fa-chevron-left"></i></a>
+                        <a class="button large circle transparent primary inline"><i class="fa fa-chevron-right"></i></a>
                     </div>
                 </header>
-                <div class="cols-5th gutter pad-vertical border-bottom border-lighten">
+                <div class="cols-5th gutter cols-4th-small pad-vertical border-bottom border-lighten">
                     <div>
                         <div style="padding: 50% 0" class="bg-white"></div>
                         <figcaption class="pad small bg-dark">
@@ -107,7 +107,7 @@
                     <div>
                         <div style="height: 100px;" class="bg-lighten"></div>
                         <hgroup class="pad small bg-dark text-center">
-                            <h6>New Releases</h6>
+                            <h6>Hi Ashley</h6>
                             <div class="subtext">Calvin Harris, Ella Eyre, Neil Young</div>
                         </hgroup>
                     </div>
@@ -124,7 +124,7 @@
                     <h6 class="subtext">Genres &amp; Moods</h6><span></span>
                 </header>
 
-                <div class="cols-5th cols-4th-medium gutter pad-vertical">
+                <div class="cols-5th cols-4th-small pad-vertical">
                     <div class="bg-lighten text-midcenter" style="height: 200px;">
                         <div class="inline">
                             <i class="fa fa-gift fa-4x"></i>
