Added %ratio-* components

--- a/demos/spotify.html
+++ b/demos/spotify.html
@@ -60,7 +60,9 @@
                 </header>
                 <div class="cols-5th gutter cols-4th-small pad-vertical border-bottom border-lighten">
                     <div>
-                        <div style="padding: 50% 0" class="bg-white"></div>
+                        <div class="bg-white ratio ratio-1-1">
+                            <span>Hey</span>
+                        </div>
                         <figcaption class="pad small bg-dark">
                             <h5>Cozy Evening</h5>
                             <p class="subtext">What could be better than an evening inside, all warm and relaxed on the couch?</p>
