Work in progress: %type-rule component, images module, top secret animation mixins

--- a/demos/spotify.html
+++ b/demos/spotify.html
@@ -61,7 +61,14 @@
                 <div class="cols-5th gutter cols-4th-small pad-vertical border-bottom border-lighten">
                     <div>
                         <div class="bg-white ratio ratio-1-1">
-                            <span>Hey</span>
+                            <img src="https://d3rt1990lpmkn.cloudfront.net/300/8028a6698da9f2c0fddef420090221ac34ce6f85" alt="" class="full">
+                            <div class="bg-darken text-midcenter">
+                                <i class="pad-small fa fa-plus fa-2x"></i>
+                                <a href="#" class="button large circle">
+                                    <i class="pad-small fa fa-play fa-2x"></i>
+                                </a>
+                                <i class="pad-small fa fa-ellipsis-h fa-2x"></i>
+                            </div>
                         </div>
                         <figcaption class="pad small bg-dark">
                             <h5>Cozy Evening</h5>
